You know, like add text_parser.js

--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,6 @@ temp/
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,node
+
+# Yggdrasil
+launcher_accounts.json
